--- a/index.css
+++ b/index.css
@@ -1,3 +1,83 @@
-#heading {
-    color: blueviolet;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black ;
+    pointer-events: visible;
+}
+.logo{
+    width: 100px;
+}
+.nav-items>ul{
+    display: flex;
+    list-style: none;
+    font-size: 24px;
+
+}
+.nav-items>ul>li{
+    padding: 20px;
+    margin: 10px;
+}
+.search{
+    padding: 10px;
+    padding-right: 20px;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2px;             /* space between cards */
+  margin-top: 20px;
+}
+.rest-card{
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  width: 250px;
+  height: 300px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  cursor: pointer;
+  padding-top: 5px;
+  
+}
+.card-img {
+  width: 150px;
+  height: 150px;
+  padding: 5px;
+
+}
+/* Container for shimmer cards */
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 20px;
+}
+
+/* Fake card shape */
+.shimmer-card {
+  width: 200px;
+  height: 250px;
+  border-radius: 12px;
+  background: linear-gradient(
+    90deg,
+    #e0e0e0 25%,
+    #f5f5f5 50%,
+    #e0e0e0 75%
+  );
+  background-size: 200% 100%;
+  animation: shimmer 1.5s infinite;
+}
+
+/* Shimmer animation */
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+
+.login{
+  padding: 0 20px;
+  cursor: pointer;
 }
